--- a/index.html
+++ b/index.html
@@ -8,82 +8,61 @@
 </head>
 <body>
     <div class="container">
-        <header class="header">
-            <h1>Kalkulator Matriks</h1>
-            <div class="student-info">
-                <p><strong>Nama:</strong> Fikri Dzakwan</p>
-                <p><strong>NIM:</strong> 411241032</p>
+        <div class="header">
+            <h1>🔢 Kalkulator Matriks</h1>
+            <div class="info">
+                <div><strong>Nama:</strong> Fikri Dzakwan</div>
+                <div><strong>NIM:</strong> 411241032</div>
             </div>
-        </header>
+        </div>
 
-        <main class="main-content">
-            <!-- Kontrol Pengaturan -->
-            <section class="controls-section">
-                <div class="control-group">
-                    <label for="matrixSize">Ukuran Matriks:</label>
-                    <select id="matrixSize" class="control-select">
-                        <option value="2">2x2</option>
-                        <option value="3" selected>3x3</option>
-                        <option value="4">4x4</option>
-                    </select>
-                </div>
-                
-                <div class="control-group">
-                    <label for="operation">Operasi:</label>
-                    <select id="operation" class="control-select">
-                        <option value="add">Penjumlahan (+)</option>
-                        <option value="subtract">Pengurangan (-)</option>
-                        <option value="multiply">Perkalian (×)</option>
-                        <option value="determinant">Determinan</option>
-                        <option value="transpose">Transpose</option>
-                        <option value="inverse">Invers</option>
-                    </select>
-                </div>
-            </section>
+        <div class="controls">
+            <div class="size-control">
+                <label>Baris Matriks A:</label>
+                <input type="number" id="rowsA" value="2" min="1" max="5">
+            </div>
+            <div class="size-control">
+                <label>Kolom Matriks A:</label>
+                <input type="number" id="colsA" value="2" min="1" max="5">
+            </div>
+            <div class="size-control">
+                <label>Baris Matriks B:</label>
+                <input type="number" id="rowsB" value="2" min="1" max="5">
+            </div>
+            <div class="size-control">
+                <label>Kolom Matriks B:</label>
+                <input type="number" id="colsB" value="2" min="1" max="5">
+            </div>
+        </div>
 
-            <!-- Area Matriks -->
-            <section class="matrices-section">
-                <div class="matrix-container">
-                    <h3 class="matrix-title">Matriks A</h3>
-                    <div id="matrixA" class="matrix-grid"></div>
-                </div>
+        <div class="operations">
+            <button class="btn btn-primary" onclick="calculateMatrix('add')">A + B</button>
+            <button class="btn btn-primary" onclick="calculateMatrix('subtract')">A - B</button>
+            <button class="btn btn-success" onclick="calculateMatrix('multiply')">A × B</button>
+            <button class="btn btn-warning" onclick="calculateMatrix('determinant')">Determinan</button>
+            <button class="btn btn-info" onclick="calculateMatrix('transpose')">Transpose</button>
+            <button class="btn btn-danger" onclick="generateMatrices()">Buat Matriks</button>
+        </div>
 
-                <div class="matrix-container" id="matrixBContainer">
-                    <h3 class="matrix-title">Matriks B</h3>
-                    <div id="matrixB" class="matrix-grid"></div>
-                </div>
-            </section>
+        <div class="matrices-container">
+            <div class="matrix-section">
+                <h3>Matriks A</h3>
+                <div id="matrixA" class="matrix"></div>
+                <button class="btn btn-secondary" onclick="randomFillMatrix('matrixA')">Isi Random</button>
+            </div>
+            <div class="matrix-section">
+                <h3>Matriks B</h3>
+                <div id="matrixB" class="matrix"></div>
+                <button class="btn btn-secondary" onclick="randomFillMatrix('matrixB')">Isi Random</button>
+            </div>
+        </div>
 
-            <!-- Tombol Aksi -->
-            <section class="actions-section">
-                <button id="calculateBtn" class="btn btn-primary">
-                    <span class="btn-icon">🧮</span>
-                    Hitung
-                </button>
-                <button id="clearBtn" class="btn btn-secondary">
-                    <span class="btn-icon">🧹</span>
-                    Bersihkan
-                </button>
-                <button id="randomBtn" class="btn btn-secondary">
-                    <span class="btn-icon">🎲</span>
-                    Isi Random
-                </button>
-            </section>
-
-            <!-- Area Hasil -->
-            <section class="result-section">
-                <h3 class="result-title">Hasil Perhitungan</h3>
-                <div id="resultDisplay" class="result-display">
-                    <div class="result-placeholder">
-                        Pilih operasi dan isi matriks untuk melihat hasil
-                    </div>
-                </div>
-            </section>
-        </main>
-
-        <footer class="footer">
-            <p>&copy; 2024 Kalkulator Matriks - Fikri Dzakwan (411241032)</p>
-        </footer>
+        <div class="result-section">
+            <h3>Hasil Operasi</h3>
+            <div id="result">
+                <p style="text-align: center; color: #666;">Belum ada operasi yang dilakukan</p>
+            </div>
+        </div>
     </div>
 
     <script src="script.js"></script>
