--- a/index.html
+++ b/index.html
@@ -15,11 +15,12 @@
   <main>
     <section class="controls">
       <label for="order">Pilih Ordo Matriks:</label>
-      <select id="order" onchange="renderMatrixInputs()">
+      <select id="order">
         <option value="2">2x2</option>
         <option value="3">3x3</option>
         <option value="4">4x4</option>
       </select>
+      <button id="generateBtn">Buat Matriks</button>
     </section>
 
     <section id="matrices">
