--- a/index.html
+++ b/index.html
@@ -14,14 +14,15 @@
 
   <main>
     <section class="controls">
-      <label for="order">Pilih Ordo Matriks:</label>
-      <select id="order">
-        <option value="2">2x2</option>
-        <option value="3">3x3</option>
-        <option value="4">4x4</option>
-      </select>
-      <button id="generateBtn">Buat Matriks</button>
-    </section>
+  <label for="order">Pilih Ordo Matriks:</label>
+  <select id="order">
+    <option value="2">2x2</option>
+    <option value="3">3x3</option>
+    <option value="4">4x4</option>
+  </select>
+  <button id="generateBtn">Buat Matriks</button>
+  <button id="randomBtn">Isi Angka Random</button>
+</section>
 
     <section id="matrices">
       <div id="matrixA" class="matrix-block"></div>
